# GenAIResultsComparator

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  PYPI_DESCRIPTION.md  README.md  mkdocs.yml  project_macros.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy-docs.yml  publish-pypi.yml
code/: main.py
data/: sc_election_faqs_llama3.csv
docs/: index.md  news.md  quickstart.md
docs/api/metrics/: audio.md  planning.md  timeseries.md
examples/: DeepSeek-example.ipynb  README.md  bleu-example.ipynb  bleu_example.ipynb  example-1.ipynb  example-2.ipynb  example-DeepSeek.ipynb  example-audio_data.ipynb  example-recipes.ipynb  example-structured_data.ipynb  quickstart-1.ipynb  quickstart-2.ipynb  quickstart.ipynb  threshold-example.ipynb  viz-example.ipynb  workflow.ipynb
examples/DeepSeek/: R1_faq-example.ipynb  R1_faq_example_1.ipynb  R1_faq_example_2.ipynb  README.md
examples/DeepSeek/data/: generic_qa.json  huggingface.json  response_metrics.pkl
examples/DeepSeek/data/processed/: llm_responses_2.csv
examples/DeepSeek/results/: response_metrics_1.pkl  response_metrics_2.pkl
examples/R1/: R1_faq_example.ipynb  README.md  response_metrics.pkl
examples/advanced-examples/: README.md  adv_viz-example.ipynb  example-llm_faq.ipynb  example-viz.ipynb  llm_faq-example.ipynb  threshold-example.ipynb  viz-example.ipynb
examples/basic-examples/: README.md  example-DeepSeek.ipynb  example-election.ipynb  example-finance.ipynb  example-planning.ipynb  example-recipes.ipynb  example-timeseries.ipynb
examples/data/: R3_conversion_1-shot-0.3.json  README.md
examples/data/audio/: tts_evaluation.csv
examples/data/deepseek/data/: response_metrics.pkl
examples/data/election/: SC-Election-Data-April2022-AI-Comparison.csv
examples/data/finance/: finance_faqs.csv
examples/data/llm_faq/data/: response_metrics.pkl
examples/data/quickstarts/: quickstart_2.csv
examples/data/recipes/: r3_comparsion.csv
examples/data/structured_examples/: planning_metrics_report.csv  timeseries_metrics_report.csv
examples/data/threshold/: batch_analysis.csv  custom_threshold_analysis.csv  single_pair_analysis.csv
examples/llm_aware_metrics/: 3_alignment_score.ipynb  README.md  example_agg_similarity_score.ipynb  example_alignment_score.ipynb
examples/llm_aware_metrics/code/: aggregated_similarity_score.py  alignment_score.py  base.py  prompt_aware.py  schema_based.py
examples/llm_aware_metrics/examples/: data_example_R3.ipynb  example_agg_similarity_score.ipynb  example_prompt_aware_comparison.ipynb  example_schema_based_comparison.ipynb
examples/llm_faq/: llm_faq_example.ipynb  response_metrics.pkl  visualization.ipynb
examples/metric_deltas/: batch_analysis.csv  custom_threshold_analysis.csv  deltas.ipynb  single_pair_analysis.csv
examples/quickstart/: README.md  quickstart_example.ipynb
gaico/: __init__.py  base.py  exceptions.py  experiment.py  semantic_similarity_metrics.py  thresholds.py  utils.py  visualize.py
gaico/metrics/: base.py  ngram_metrics.py  semantic_similarity_metrics.py  text_similarity_metrics.py
gaico/metrics/audio/: audio.py
gaico/metrics/image/: image.py
gaico/metrics/structured/: __init__.py  structured.py
llm_metrics/: __init__.py  base.py  ngram_metrics.py  semantic_similarity_metrics.py  text_similarity_metrics.py  thresholds.py  utils.py  visualize.py
scripts/: README.md  generate_pypi_description.py  prepare-release.sh
tests/: audio_metrics_test.py  conftest.py  experiment_test.py  ngram_metrics_test.py  semantic_similarity_metrics_test.py  structured_metrics_test.py  text_similarity_metrics_test.py  utils_test.py  visualize_test.py
visualization/: __init__.py  plotter.py  utilis.py
